# Plataforma-automatizada-UPSLP

./: db.sqlite3  manage.py
calificaciones/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
calificaciones/migrations/: 0001_initial.py
calificaciones/templates/: base.html
calificaciones/templates/calificaciones/: editar_calificacion.html  eliminar_calificacion_confirmacion.html  historial_profesor.html  registrar.html  subir_calificaciones.html  ver.html
cbse_reportes_pdf/: README.md  pyproject.toml
cbse_reportes_pdf/src/cbse_reportes_pdf/: services.py
cbse_reportes_pdf/src/cbse_reportes_pdf.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cbse_reportes_pdf/src/cbse_reportes_pdf/exporters/: pdf.py
cbse_reportes_pdf/ven/: pyvenv.cfg
cbse_reportes_pdf/ven/Scripts/: activate  activate.bat
plataforma_academica/: asgi.py  settings.py  urls.py  wsgi.py
reportes/: admin.py  models.py
reportes/migrations/: 0001_initial.py
usuarios/: admin.py  forms.py  models.py  urls.py  views.py
usuarios/migrations/: 0001_initial.py  0002_alter_usuario_rol.py
usuarios/templates/: base.html
usuarios/templates/usuarios/: bienvenida.html  eliminar_confirmacion.html  form_usuario.html  inicio_publico.html  listar.html  login.html  no_autorizado.html
